fix(slides/how): typo

--- a/slides/how.html
+++ b/slides/how.html
@@ -364,7 +364,7 @@ $invoicedCustomer = CustomerBuilder::create()
 ;
 
 // $service1 = (new Provider())->setId('3')->setSlug('slug')->setName('Service 1')->setService(true)->setShortname('IP');
-$service1 = ProviderBuilder::anService()
+$service1 = ProviderBuilder::aService()
     ->withName('Service 1')
     ->withId('3')
     ->build()
